tests/paczka1/small_fuzzy/20120658.err
Error in line 3: RtuIM A468 26,5
Error in line 11: DGsnO8n A468 78,1
Error in line 9: l3d6BX A468 85,1
